k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkedeye-finspot
  labels:
    app: linkedeye-finspot
    environment: development
